--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,3 +1,13 @@
+---
+import { ClientRouter } from "astro:transitions";
+import "../styles/global.css";
+interface Props {
+	title:string;
+}
+
+const { title } = Astro.props
+---
+
 <!doctype html>
 <html lang="en">
 	<head>
@@ -5,10 +15,13 @@
 		<meta name="viewport" content="width=device-width" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="generator" content={Astro.generator} />
-		<title>Aires del Rosario</title>
+		<title>{title}</title>
+		<ClientRouter/>
 	</head>
 	<body>
-		<slot />
+		<div>
+			<slot />
+		</div>
 	</body>
 </html>
 
@@ -18,5 +31,13 @@
 		margin: 0;
 		width: 100%;
 		height: 100%;
+		background-color: rgb(31, 29, 48);
+		color: white;
+		/* text-align: center; */
+		@apply grid place-content-center;
+	}
+	body > div {
+		/* @apply content; */
+		margin: 25px 0px;
 	}
 </style>
